--- a/project1/assets/style.css
+++ b/project1/assets/style.css
@@ -20,10 +20,11 @@ body {
 
 .header {
     text-align: center;
-    /* padding: 4px; */
     font-size: 24px;
     font-family: 'Poppins', sans-serif;
     vertical-align: middle;
+   margin-top: 12px;
+
 }
 
 .headerText {
